APIs/googleapis.com/displayvideo/v1/javascript-client/README.md
# display__video_360_api

DisplayVideo360Api - JavaScript client for display__video_360_api
Display & Video 360 API allows users to automate complex Display & Video 360 workflows, such as creating insertion orders and setting targeting options for individual line items.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install display__video_360_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your display__video_360_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var DisplayVideo360Api = require('display__video_360_api');

var defaultClient = DisplayVideo360Api.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new DisplayVideo360Api.AdvertisersApi()
var advertiserId = "advertiserId_example"; // {String} Required. The ID of the advertiser this asset belongs to.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'createAssetRequest': new DisplayVideo360Api.CreateAssetRequest() // {CreateAssetRequest} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.displayvideoAdvertisersAssetsUpload(advertiserId, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://displayvideo.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersAssetsUpload**](docs/AdvertisersApi.md#displayvideoAdvertisersAssetsUpload) | **POST** /v1/advertisers/{advertiserId}/assets | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersAudit**](docs/AdvertisersApi.md#displayvideoAdvertisersAudit) | **GET** /v1/advertisers/{advertiserId}:audit | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersBulkEditAdvertiserAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersBulkEditAdvertiserAssignedTargetingOptions) | **POST** /v1/advertisers/{advertiserId}:bulkEditAdvertiserAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersBulkListAdvertiserAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersBulkListAdvertiserAssignedTargetingOptions) | **GET** /v1/advertisers/{advertiserId}:bulkListAdvertiserAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsBulkListCampaignAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsBulkListCampaignAssignedTargetingOptions) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}:bulkListCampaignAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsCreate) | **POST** /v1/advertisers/{advertiserId}/campaigns | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsDelete) | **DELETE** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsGet) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsList**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsList) | **GET** /v1/advertisers/{advertiserId}/campaigns | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsPatch) | **PATCH** /v1/advertisers/{advertiserId}/campaigns/{campaignId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsGet) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersCampaignsTargetingTypesAssignedTargetingOptionsList) | **GET** /v1/advertisers/{advertiserId}/campaigns/{campaignId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsCreate) | **POST** /v1/advertisers/{advertiserId}/channels | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsList**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsList) | **GET** /v1/advertisers/{advertiserId}/channels | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsPatch) | **PATCH** /v1/advertisers/{advertiserId}/channels/{channelId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesBulkEdit) | **POST** /v1/advertisers/{advertiserId}/channels/{channelId}/sites:bulkEdit | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesDelete) | **DELETE** /v1/advertisers/{advertiserId}/channels/{channelId}/sites/{urlOrAppId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesList**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesList) | **GET** /v1/advertisers/{advertiserId}/channels/{channelId}/sites | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersChannelsSitesReplace**](docs/AdvertisersApi.md#displayvideoAdvertisersChannelsSitesReplace) | **POST** /v1/advertisers/{advertiserId}/channels/{channelId}/sites:replace | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCreate) | **POST** /v1/advertisers | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreativesCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesCreate) | **POST** /v1/advertisers/{advertiserId}/creatives | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreativesDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesDelete) | **DELETE** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreativesGet**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesGet) | **GET** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreativesList**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesList) | **GET** /v1/advertisers/{advertiserId}/creatives | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersCreativesPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersCreativesPatch) | **PATCH** /v1/advertisers/{advertiserId}/creatives/{creativeId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersDelete) | **DELETE** /v1/advertisers/{advertiserId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersGet) | **GET** /v1/advertisers/{advertiserId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersBulkListInsertionOrderAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersBulkListInsertionOrderAssignedTargetingOptions) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}:bulkListInsertionOrderAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersCreate) | **POST** /v1/advertisers/{advertiserId}/insertionOrders | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersDelete) | **DELETE** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersGet) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersList**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersList) | **GET** /v1/advertisers/{advertiserId}/insertionOrders | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersPatch) | **PATCH** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersInsertionOrdersTargetingTypesAssignedTargetingOptionsList) | **GET** /v1/advertisers/{advertiserId}/insertionOrders/{insertionOrderId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInvoicesList**](docs/AdvertisersApi.md#displayvideoAdvertisersInvoicesList) | **GET** /v1/advertisers/{advertiserId}/invoices | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersInvoicesLookupInvoiceCurrency**](docs/AdvertisersApi.md#displayvideoAdvertisersInvoicesLookupInvoiceCurrency) | **GET** /v1/advertisers/{advertiserId}/invoices:lookupInvoiceCurrency | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsBulkEditLineItemAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsBulkEditLineItemAssignedTargetingOptions) | **POST** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}:bulkEditLineItemAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsBulkListLineItemAssignedTargetingOptions**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsBulkListLineItemAssignedTargetingOptions) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}:bulkListLineItemAssignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsCreate) | **POST** /v1/advertisers/{advertiserId}/lineItems | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsDelete) | **DELETE** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsGenerateDefault**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsGenerateDefault) | **POST** /v1/advertisers/{advertiserId}/lineItems:generateDefault | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsGet) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsList) | **GET** /v1/advertisers/{advertiserId}/lineItems | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsPatch) | **PATCH** /v1/advertisers/{advertiserId}/lineItems/{lineItemId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsGet) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLineItemsTargetingTypesAssignedTargetingOptionsList) | **GET** /v1/advertisers/{advertiserId}/lineItems/{lineItemId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersList**](docs/AdvertisersApi.md#displayvideoAdvertisersList) | **GET** /v1/advertisers | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsBulkEdit) | **POST** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations:bulkEdit | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsCreate) | **POST** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsDelete) | **DELETE** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations/{assignedLocationId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsAssignedLocationsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsAssignedLocationsList) | **GET** /v1/advertisers/{advertiserId}/locationLists/{locationListId}/assignedLocations | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsCreate) | **POST** /v1/advertisers/{advertiserId}/locationLists | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsList**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsList) | **GET** /v1/advertisers/{advertiserId}/locationLists | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersLocationListsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersLocationListsPatch) | **PATCH** /v1/advertisers/{advertiserId}/locationLists/{locationListId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersActivate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersActivate) | **POST** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId}:activate | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersCreate) | **POST** /v1/advertisers/{advertiserId}/manualTriggers | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersDeactivate**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersDeactivate) | **POST** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId}:deactivate | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersGet**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersGet) | **GET** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersList**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersList) | **GET** /v1/advertisers/{advertiserId}/manualTriggers | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersManualTriggersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersManualTriggersPatch) | **PATCH** /v1/advertisers/{advertiserId}/manualTriggers/{triggerId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsCreate) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsList**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsList) | **GET** /v1/advertisers/{advertiserId}/negativeKeywordLists | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsBulkEdit**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsBulkEdit) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:bulkEdit | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsDelete) | **DELETE** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords/{keywordValue} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsList**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsList) | **GET** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsReplace**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsNegativeKeywordsReplace) | **POST** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId}/negativeKeywords:replace | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersNegativeKeywordListsPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersNegativeKeywordListsPatch) | **PATCH** /v1/advertisers/{advertiserId}/negativeKeywordLists/{negativeKeywordListId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersPatch**](docs/AdvertisersApi.md#displayvideoAdvertisersPatch) | **PATCH** /v1/advertisers/{advertiserId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsCreate**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsDelete**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsGet**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.AdvertisersApi* | [**displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsList**](docs/AdvertisersApi.md#displayvideoAdvertisersTargetingTypesAssignedTargetingOptionsList) | **GET** /v1/advertisers/{advertiserId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.CombinedAudiencesApi* | [**displayvideoCombinedAudiencesGet**](docs/CombinedAudiencesApi.md#displayvideoCombinedAudiencesGet) | **GET** /v1/combinedAudiences/{combinedAudienceId} | 
*DisplayVideo360Api.CombinedAudiencesApi* | [**displayvideoCombinedAudiencesList**](docs/CombinedAudiencesApi.md#displayvideoCombinedAudiencesList) | **GET** /v1/combinedAudiences | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsCreate**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsCreate) | **POST** /v1/customBiddingAlgorithms | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsGet**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsGet) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsList**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsList) | **GET** /v1/customBiddingAlgorithms | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsPatch**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsPatch) | **PATCH** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId} | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsCreate**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsCreate) | **POST** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsGet**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsGet) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts/{customBiddingScriptId} | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsScriptsList**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsScriptsList) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}/scripts | 
*DisplayVideo360Api.CustomBiddingAlgorithmsApi* | [**displayvideoCustomBiddingAlgorithmsUploadScript**](docs/CustomBiddingAlgorithmsApi.md#displayvideoCustomBiddingAlgorithmsUploadScript) | **GET** /v1/customBiddingAlgorithms/{customBiddingAlgorithmId}:uploadScript | 
*DisplayVideo360Api.CustomListsApi* | [**displayvideoCustomListsGet**](docs/CustomListsApi.md#displayvideoCustomListsGet) | **GET** /v1/customLists/{customListId} | 
*DisplayVideo360Api.CustomListsApi* | [**displayvideoCustomListsList**](docs/CustomListsApi.md#displayvideoCustomListsList) | **GET** /v1/customLists | 
*DisplayVideo360Api.FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesCreate**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesCreate) | **POST** /v1/firstAndThirdPartyAudiences | 
*DisplayVideo360Api.FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesEditCustomerMatchMembers**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesEditCustomerMatchMembers) | **POST** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId}:editCustomerMatchMembers | 
*DisplayVideo360Api.FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesGet**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesGet) | **GET** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*DisplayVideo360Api.FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesList**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesList) | **GET** /v1/firstAndThirdPartyAudiences | 
*DisplayVideo360Api.FirstAndThirdPartyAudiencesApi* | [**displayvideoFirstAndThirdPartyAudiencesPatch**](docs/FirstAndThirdPartyAudiencesApi.md#displayvideoFirstAndThirdPartyAudiencesPatch) | **PATCH** /v1/firstAndThirdPartyAudiences/{firstAndThirdPartyAudienceId} | 
*DisplayVideo360Api.FloodlightGroupsApi* | [**displayvideoFloodlightGroupsGet**](docs/FloodlightGroupsApi.md#displayvideoFloodlightGroupsGet) | **GET** /v1/floodlightGroups/{floodlightGroupId} | 
*DisplayVideo360Api.GoogleAudiencesApi* | [**displayvideoGoogleAudiencesGet**](docs/GoogleAudiencesApi.md#displayvideoGoogleAudiencesGet) | **GET** /v1/googleAudiences/{googleAudienceId} | 
*DisplayVideo360Api.GoogleAudiencesApi* | [**displayvideoGoogleAudiencesList**](docs/GoogleAudiencesApi.md#displayvideoGoogleAudiencesList) | **GET** /v1/googleAudiences | 
*DisplayVideo360Api.GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersCreate**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersCreate) | **POST** /v1/guaranteedOrders | 
*DisplayVideo360Api.GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersEditGuaranteedOrderReadAccessors**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersEditGuaranteedOrderReadAccessors) | **POST** /v1/guaranteedOrders/{guaranteedOrderId}:editGuaranteedOrderReadAccessors | 
*DisplayVideo360Api.GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersGet**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersGet) | **GET** /v1/guaranteedOrders/{guaranteedOrderId} | 
*DisplayVideo360Api.GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersList**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersList) | **GET** /v1/guaranteedOrders | 
*DisplayVideo360Api.GuaranteedOrdersApi* | [**displayvideoGuaranteedOrdersPatch**](docs/GuaranteedOrdersApi.md#displayvideoGuaranteedOrdersPatch) | **PATCH** /v1/guaranteedOrders/{guaranteedOrderId} | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesBulkEdit**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesBulkEdit) | **POST** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources:bulkEdit | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesCreate**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesCreate) | **POST** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesDelete**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesDelete) | **DELETE** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources/{assignedInventorySourceId} | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsAssignedInventorySourcesList**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsAssignedInventorySourcesList) | **GET** /v1/inventorySourceGroups/{inventorySourceGroupId}/assignedInventorySources | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsCreate**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsCreate) | **POST** /v1/inventorySourceGroups | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsDelete**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsDelete) | **DELETE** /v1/inventorySourceGroups/{inventorySourceGroupId} | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsGet**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsGet) | **GET** /v1/inventorySourceGroups/{inventorySourceGroupId} | 
*DisplayVideo360Api.InventorySourceGroupsApi* | [**displayvideoInventorySourceGroupsList**](docs/InventorySourceGroupsApi.md#displayvideoInventorySourceGroupsList) | **GET** /v1/inventorySourceGroups | 
*DisplayVideo360Api.InventorySourcesApi* | [**displayvideoInventorySourcesCreate**](docs/InventorySourcesApi.md#displayvideoInventorySourcesCreate) | **POST** /v1/inventorySources | 
*DisplayVideo360Api.InventorySourcesApi* | [**displayvideoInventorySourcesEditInventorySourceReadWriteAccessors**](docs/InventorySourcesApi.md#displayvideoInventorySourcesEditInventorySourceReadWriteAccessors) | **POST** /v1/inventorySources/{inventorySourceId}:editInventorySourceReadWriteAccessors | 
*DisplayVideo360Api.InventorySourcesApi* | [**displayvideoInventorySourcesGet**](docs/InventorySourcesApi.md#displayvideoInventorySourcesGet) | **GET** /v1/inventorySources/{inventorySourceId} | 
*DisplayVideo360Api.InventorySourcesApi* | [**displayvideoInventorySourcesList**](docs/InventorySourcesApi.md#displayvideoInventorySourcesList) | **GET** /v1/inventorySources | 
*DisplayVideo360Api.InventorySourcesApi* | [**displayvideoInventorySourcesPatch**](docs/InventorySourcesApi.md#displayvideoInventorySourcesPatch) | **PATCH** /v1/inventorySources/{inventorySourceId} | 
*DisplayVideo360Api.MediaApi* | [**displayvideoMediaDownload**](docs/MediaApi.md#displayvideoMediaDownload) | **GET** /download/{resourceName} | 
*DisplayVideo360Api.MediaApi* | [**displayvideoMediaUpload**](docs/MediaApi.md#displayvideoMediaUpload) | **POST** /media/{resourceName} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersBulkEditPartnerAssignedTargetingOptions**](docs/PartnersApi.md#displayvideoPartnersBulkEditPartnerAssignedTargetingOptions) | **POST** /v1/partners/{partnerId}:bulkEditPartnerAssignedTargetingOptions | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsCreate**](docs/PartnersApi.md#displayvideoPartnersChannelsCreate) | **POST** /v1/partners/{partnerId}/channels | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsList**](docs/PartnersApi.md#displayvideoPartnersChannelsList) | **GET** /v1/partners/{partnerId}/channels | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsPatch**](docs/PartnersApi.md#displayvideoPartnersChannelsPatch) | **PATCH** /v1/partners/{partnerId}/channels/{channelId} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsSitesBulkEdit**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesBulkEdit) | **POST** /v1/partners/{partnerId}/channels/{channelId}/sites:bulkEdit | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsSitesDelete**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesDelete) | **DELETE** /v1/partners/{partnerId}/channels/{channelId}/sites/{urlOrAppId} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsSitesList**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesList) | **GET** /v1/partners/{partnerId}/channels/{channelId}/sites | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersChannelsSitesReplace**](docs/PartnersApi.md#displayvideoPartnersChannelsSitesReplace) | **POST** /v1/partners/{partnerId}/channels/{channelId}/sites:replace | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersGet**](docs/PartnersApi.md#displayvideoPartnersGet) | **GET** /v1/partners/{partnerId} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersList**](docs/PartnersApi.md#displayvideoPartnersList) | **GET** /v1/partners | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsCreate**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsCreate) | **POST** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsDelete**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsDelete) | **DELETE** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsGet**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsGet) | **GET** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions/{assignedTargetingOptionId} | 
*DisplayVideo360Api.PartnersApi* | [**displayvideoPartnersTargetingTypesAssignedTargetingOptionsList**](docs/PartnersApi.md#displayvideoPartnersTargetingTypesAssignedTargetingOptionsList) | **GET** /v1/partners/{partnerId}/targetingTypes/{targetingType}/assignedTargetingOptions | 
*DisplayVideo360Api.SdfdownloadtasksApi* | [**displayvideoSdfdownloadtasksCreate**](docs/SdfdownloadtasksApi.md#displayvideoSdfdownloadtasksCreate) | **POST** /v1/sdfdownloadtasks | 
*DisplayVideo360Api.SdfdownloadtasksApi* | [**displayvideoSdfdownloadtasksOperationsGet**](docs/SdfdownloadtasksApi.md#displayvideoSdfdownloadtasksOperationsGet) | **GET** /v1/{name} | 
*DisplayVideo360Api.TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsGet**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsGet) | **GET** /v1/targetingTypes/{targetingType}/targetingOptions/{targetingOptionId} | 
*DisplayVideo360Api.TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsList**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsList) | **GET** /v1/targetingTypes/{targetingType}/targetingOptions | 
*DisplayVideo360Api.TargetingTypesApi* | [**displayvideoTargetingTypesTargetingOptionsSearch**](docs/TargetingTypesApi.md#displayvideoTargetingTypesTargetingOptionsSearch) | **POST** /v1/targetingTypes/{targetingType}/targetingOptions:search | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersBulkEditAssignedUserRoles**](docs/UsersApi.md#displayvideoUsersBulkEditAssignedUserRoles) | **POST** /v1/users/{userId}:bulkEditAssignedUserRoles | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersCreate**](docs/UsersApi.md#displayvideoUsersCreate) | **POST** /v1/users | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersDelete**](docs/UsersApi.md#displayvideoUsersDelete) | **DELETE** /v1/users/{userId} | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersGet**](docs/UsersApi.md#displayvideoUsersGet) | **GET** /v1/users/{userId} | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersList**](docs/UsersApi.md#displayvideoUsersList) | **GET** /v1/users | 
*DisplayVideo360Api.UsersApi* | [**displayvideoUsersPatch**](docs/UsersApi.md#displayvideoUsersPatch) | **PATCH** /v1/users/{userId} | 


## Documentation for Models

 - [DisplayVideo360Api.ActiveViewVideoViewabilityMetricConfig](docs/ActiveViewVideoViewabilityMetricConfig.md)
 - [DisplayVideo360Api.Adloox](docs/Adloox.md)
 - [DisplayVideo360Api.Advertiser](docs/Advertiser.md)
 - [DisplayVideo360Api.AdvertiserAdServerConfig](docs/AdvertiserAdServerConfig.md)
 - [DisplayVideo360Api.AdvertiserCreativeConfig](docs/AdvertiserCreativeConfig.md)
 - [DisplayVideo360Api.AdvertiserDataAccessConfig](docs/AdvertiserDataAccessConfig.md)
 - [DisplayVideo360Api.AdvertiserGeneralConfig](docs/AdvertiserGeneralConfig.md)
 - [DisplayVideo360Api.AdvertiserSdfConfig](docs/AdvertiserSdfConfig.md)
 - [DisplayVideo360Api.AdvertiserTargetingConfig](docs/AdvertiserTargetingConfig.md)
 - [DisplayVideo360Api.AgeRangeAssignedTargetingOptionDetails](docs/AgeRangeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AgeRangeTargetingOptionDetails](docs/AgeRangeTargetingOptionDetails.md)
 - [DisplayVideo360Api.AppAssignedTargetingOptionDetails](docs/AppAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AppCategoryAssignedTargetingOptionDetails](docs/AppCategoryAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AppCategoryTargetingOptionDetails](docs/AppCategoryTargetingOptionDetails.md)
 - [DisplayVideo360Api.Asset](docs/Asset.md)
 - [DisplayVideo360Api.AssetAssociation](docs/AssetAssociation.md)
 - [DisplayVideo360Api.AssignedInventorySource](docs/AssignedInventorySource.md)
 - [DisplayVideo360Api.AssignedLocation](docs/AssignedLocation.md)
 - [DisplayVideo360Api.AssignedTargetingOption](docs/AssignedTargetingOption.md)
 - [DisplayVideo360Api.AssignedUserRole](docs/AssignedUserRole.md)
 - [DisplayVideo360Api.AudienceGroupAssignedTargetingOptionDetails](docs/AudienceGroupAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AudioContentTypeAssignedTargetingOptionDetails](docs/AudioContentTypeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AudioContentTypeTargetingOptionDetails](docs/AudioContentTypeTargetingOptionDetails.md)
 - [DisplayVideo360Api.AudioVideoOffset](docs/AudioVideoOffset.md)
 - [DisplayVideo360Api.AuditAdvertiserResponse](docs/AuditAdvertiserResponse.md)
 - [DisplayVideo360Api.AuthorizedSellerStatusAssignedTargetingOptionDetails](docs/AuthorizedSellerStatusAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.AuthorizedSellerStatusTargetingOptionDetails](docs/AuthorizedSellerStatusTargetingOptionDetails.md)
 - [DisplayVideo360Api.BiddingStrategy](docs/BiddingStrategy.md)
 - [DisplayVideo360Api.BrowserAssignedTargetingOptionDetails](docs/BrowserAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.BrowserTargetingOptionDetails](docs/BrowserTargetingOptionDetails.md)
 - [DisplayVideo360Api.BudgetSummary](docs/BudgetSummary.md)
 - [DisplayVideo360Api.BulkEditAdvertiserAssignedTargetingOptionsRequest](docs/BulkEditAdvertiserAssignedTargetingOptionsRequest.md)
 - [DisplayVideo360Api.BulkEditAdvertiserAssignedTargetingOptionsResponse](docs/BulkEditAdvertiserAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkEditAssignedInventorySourcesRequest](docs/BulkEditAssignedInventorySourcesRequest.md)
 - [DisplayVideo360Api.BulkEditAssignedInventorySourcesResponse](docs/BulkEditAssignedInventorySourcesResponse.md)
 - [DisplayVideo360Api.BulkEditAssignedLocationsRequest](docs/BulkEditAssignedLocationsRequest.md)
 - [DisplayVideo360Api.BulkEditAssignedLocationsResponse](docs/BulkEditAssignedLocationsResponse.md)
 - [DisplayVideo360Api.BulkEditAssignedUserRolesRequest](docs/BulkEditAssignedUserRolesRequest.md)
 - [DisplayVideo360Api.BulkEditAssignedUserRolesResponse](docs/BulkEditAssignedUserRolesResponse.md)
 - [DisplayVideo360Api.BulkEditLineItemAssignedTargetingOptionsRequest](docs/BulkEditLineItemAssignedTargetingOptionsRequest.md)
 - [DisplayVideo360Api.BulkEditLineItemAssignedTargetingOptionsResponse](docs/BulkEditLineItemAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkEditNegativeKeywordsRequest](docs/BulkEditNegativeKeywordsRequest.md)
 - [DisplayVideo360Api.BulkEditNegativeKeywordsResponse](docs/BulkEditNegativeKeywordsResponse.md)
 - [DisplayVideo360Api.BulkEditPartnerAssignedTargetingOptionsRequest](docs/BulkEditPartnerAssignedTargetingOptionsRequest.md)
 - [DisplayVideo360Api.BulkEditPartnerAssignedTargetingOptionsResponse](docs/BulkEditPartnerAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkEditSitesRequest](docs/BulkEditSitesRequest.md)
 - [DisplayVideo360Api.BulkEditSitesResponse](docs/BulkEditSitesResponse.md)
 - [DisplayVideo360Api.BulkListAdvertiserAssignedTargetingOptionsResponse](docs/BulkListAdvertiserAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkListCampaignAssignedTargetingOptionsResponse](docs/BulkListCampaignAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkListInsertionOrderAssignedTargetingOptionsResponse](docs/BulkListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BulkListLineItemAssignedTargetingOptionsResponse](docs/BulkListLineItemAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.BusinessChainAssignedTargetingOptionDetails](docs/BusinessChainAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.BusinessChainSearchTerms](docs/BusinessChainSearchTerms.md)
 - [DisplayVideo360Api.BusinessChainTargetingOptionDetails](docs/BusinessChainTargetingOptionDetails.md)
 - [DisplayVideo360Api.Campaign](docs/Campaign.md)
 - [DisplayVideo360Api.CampaignBudget](docs/CampaignBudget.md)
 - [DisplayVideo360Api.CampaignFlight](docs/CampaignFlight.md)
 - [DisplayVideo360Api.CampaignGoal](docs/CampaignGoal.md)
 - [DisplayVideo360Api.CarrierAndIspAssignedTargetingOptionDetails](docs/CarrierAndIspAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.CarrierAndIspTargetingOptionDetails](docs/CarrierAndIspTargetingOptionDetails.md)
 - [DisplayVideo360Api.CategoryAssignedTargetingOptionDetails](docs/CategoryAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.CategoryTargetingOptionDetails](docs/CategoryTargetingOptionDetails.md)
 - [DisplayVideo360Api.Channel](docs/Channel.md)
 - [DisplayVideo360Api.ChannelAssignedTargetingOptionDetails](docs/ChannelAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.CmHybridConfig](docs/CmHybridConfig.md)
 - [DisplayVideo360Api.CmTrackingAd](docs/CmTrackingAd.md)
 - [DisplayVideo360Api.CombinedAudience](docs/CombinedAudience.md)
 - [DisplayVideo360Api.CombinedAudienceGroup](docs/CombinedAudienceGroup.md)
 - [DisplayVideo360Api.CombinedAudienceTargetingSetting](docs/CombinedAudienceTargetingSetting.md)
 - [DisplayVideo360Api.Consent](docs/Consent.md)
 - [DisplayVideo360Api.ContactInfo](docs/ContactInfo.md)
 - [DisplayVideo360Api.ContactInfoList](docs/ContactInfoList.md)
 - [DisplayVideo360Api.ContentDurationAssignedTargetingOptionDetails](docs/ContentDurationAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentDurationTargetingOptionDetails](docs/ContentDurationTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentGenreAssignedTargetingOptionDetails](docs/ContentGenreAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentGenreTargetingOptionDetails](docs/ContentGenreTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentInstreamPositionAssignedTargetingOptionDetails](docs/ContentInstreamPositionAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentInstreamPositionTargetingOptionDetails](docs/ContentInstreamPositionTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentOutstreamPositionAssignedTargetingOptionDetails](docs/ContentOutstreamPositionAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentOutstreamPositionTargetingOptionDetails](docs/ContentOutstreamPositionTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentStreamTypeAssignedTargetingOptionDetails](docs/ContentStreamTypeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ContentStreamTypeTargetingOptionDetails](docs/ContentStreamTypeTargetingOptionDetails.md)
 - [DisplayVideo360Api.ConversionCountingConfig](docs/ConversionCountingConfig.md)
 - [DisplayVideo360Api.CounterEvent](docs/CounterEvent.md)
 - [DisplayVideo360Api.CreateAssetRequest](docs/CreateAssetRequest.md)
 - [DisplayVideo360Api.CreateAssetResponse](docs/CreateAssetResponse.md)
 - [DisplayVideo360Api.CreateAssignedTargetingOptionsRequest](docs/CreateAssignedTargetingOptionsRequest.md)
 - [DisplayVideo360Api.CreateSdfDownloadTaskRequest](docs/CreateSdfDownloadTaskRequest.md)
 - [DisplayVideo360Api.Creative](docs/Creative.md)
 - [DisplayVideo360Api.CreativeConfig](docs/CreativeConfig.md)
 - [DisplayVideo360Api.CustomBiddingAlgorithm](docs/CustomBiddingAlgorithm.md)
 - [DisplayVideo360Api.CustomBiddingModelReadinessState](docs/CustomBiddingModelReadinessState.md)
 - [DisplayVideo360Api.CustomBiddingScript](docs/CustomBiddingScript.md)
 - [DisplayVideo360Api.CustomBiddingScriptRef](docs/CustomBiddingScriptRef.md)
 - [DisplayVideo360Api.CustomList](docs/CustomList.md)
 - [DisplayVideo360Api.CustomListGroup](docs/CustomListGroup.md)
 - [DisplayVideo360Api.CustomListTargetingSetting](docs/CustomListTargetingSetting.md)
 - [DisplayVideo360Api.DateRange](docs/DateRange.md)
 - [DisplayVideo360Api.DayAndTimeAssignedTargetingOptionDetails](docs/DayAndTimeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.DeleteAssignedTargetingOptionsRequest](docs/DeleteAssignedTargetingOptionsRequest.md)
 - [DisplayVideo360Api.DeviceMakeModelAssignedTargetingOptionDetails](docs/DeviceMakeModelAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.DeviceMakeModelTargetingOptionDetails](docs/DeviceMakeModelTargetingOptionDetails.md)
 - [DisplayVideo360Api.DeviceTypeAssignedTargetingOptionDetails](docs/DeviceTypeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.DeviceTypeTargetingOptionDetails](docs/DeviceTypeTargetingOptionDetails.md)
 - [DisplayVideo360Api.DigitalContentLabelAssignedTargetingOptionDetails](docs/DigitalContentLabelAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.DigitalContentLabelTargetingOptionDetails](docs/DigitalContentLabelTargetingOptionDetails.md)
 - [DisplayVideo360Api.Dimensions](docs/Dimensions.md)
 - [DisplayVideo360Api.DoubleVerify](docs/DoubleVerify.md)
 - [DisplayVideo360Api.DoubleVerifyAppStarRating](docs/DoubleVerifyAppStarRating.md)
 - [DisplayVideo360Api.DoubleVerifyBrandSafetyCategories](docs/DoubleVerifyBrandSafetyCategories.md)
 - [DisplayVideo360Api.DoubleVerifyDisplayViewability](docs/DoubleVerifyDisplayViewability.md)
 - [DisplayVideo360Api.DoubleVerifyFraudInvalidTraffic](docs/DoubleVerifyFraudInvalidTraffic.md)
 - [DisplayVideo360Api.DoubleVerifyVideoViewability](docs/DoubleVerifyVideoViewability.md)
 - [DisplayVideo360Api.EditCustomerMatchMembersRequest](docs/EditCustomerMatchMembersRequest.md)
 - [DisplayVideo360Api.EditCustomerMatchMembersResponse](docs/EditCustomerMatchMembersResponse.md)
 - [DisplayVideo360Api.EditGuaranteedOrderReadAccessorsRequest](docs/EditGuaranteedOrderReadAccessorsRequest.md)
 - [DisplayVideo360Api.EditGuaranteedOrderReadAccessorsResponse](docs/EditGuaranteedOrderReadAccessorsResponse.md)
 - [DisplayVideo360Api.EditInventorySourceReadWriteAccessorsRequest](docs/EditInventorySourceReadWriteAccessorsRequest.md)
 - [DisplayVideo360Api.EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate](docs/EditInventorySourceReadWriteAccessorsRequestAdvertisersUpdate.md)
 - [DisplayVideo360Api.EnvironmentAssignedTargetingOptionDetails](docs/EnvironmentAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.EnvironmentTargetingOptionDetails](docs/EnvironmentTargetingOptionDetails.md)
 - [DisplayVideo360Api.ExchangeAssignedTargetingOptionDetails](docs/ExchangeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ExchangeConfig](docs/ExchangeConfig.md)
 - [DisplayVideo360Api.ExchangeConfigEnabledExchange](docs/ExchangeConfigEnabledExchange.md)
 - [DisplayVideo360Api.ExchangeReviewStatus](docs/ExchangeReviewStatus.md)
 - [DisplayVideo360Api.ExchangeTargetingOptionDetails](docs/ExchangeTargetingOptionDetails.md)
 - [DisplayVideo360Api.ExitEvent](docs/ExitEvent.md)
 - [DisplayVideo360Api.FirstAndThirdPartyAudience](docs/FirstAndThirdPartyAudience.md)
 - [DisplayVideo360Api.FirstAndThirdPartyAudienceGroup](docs/FirstAndThirdPartyAudienceGroup.md)
 - [DisplayVideo360Api.FirstAndThirdPartyAudienceTargetingSetting](docs/FirstAndThirdPartyAudienceTargetingSetting.md)
 - [DisplayVideo360Api.FixedBidStrategy](docs/FixedBidStrategy.md)
 - [DisplayVideo360Api.FloodlightGroup](docs/FloodlightGroup.md)
 - [DisplayVideo360Api.FrequencyCap](docs/FrequencyCap.md)
 - [DisplayVideo360Api.GenderAssignedTargetingOptionDetails](docs/GenderAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.GenderTargetingOptionDetails](docs/GenderTargetingOptionDetails.md)
 - [DisplayVideo360Api.GenerateDefaultLineItemRequest](docs/GenerateDefaultLineItemRequest.md)
 - [DisplayVideo360Api.GeoRegionAssignedTargetingOptionDetails](docs/GeoRegionAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.GeoRegionSearchTerms](docs/GeoRegionSearchTerms.md)
 - [DisplayVideo360Api.GeoRegionTargetingOptionDetails](docs/GeoRegionTargetingOptionDetails.md)
 - [DisplayVideo360Api.GoogleAudience](docs/GoogleAudience.md)
 - [DisplayVideo360Api.GoogleAudienceGroup](docs/GoogleAudienceGroup.md)
 - [DisplayVideo360Api.GoogleAudienceTargetingSetting](docs/GoogleAudienceTargetingSetting.md)
 - [DisplayVideo360Api.GoogleBytestreamMedia](docs/GoogleBytestreamMedia.md)
 - [DisplayVideo360Api.GuaranteedOrder](docs/GuaranteedOrder.md)
 - [DisplayVideo360Api.GuaranteedOrderStatus](docs/GuaranteedOrderStatus.md)
 - [DisplayVideo360Api.HouseholdIncomeAssignedTargetingOptionDetails](docs/HouseholdIncomeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.HouseholdIncomeTargetingOptionDetails](docs/HouseholdIncomeTargetingOptionDetails.md)
 - [DisplayVideo360Api.IdFilter](docs/IdFilter.md)
 - [DisplayVideo360Api.InsertionOrder](docs/InsertionOrder.md)
 - [DisplayVideo360Api.InsertionOrderBudget](docs/InsertionOrderBudget.md)
 - [DisplayVideo360Api.InsertionOrderBudgetSegment](docs/InsertionOrderBudgetSegment.md)
 - [DisplayVideo360Api.IntegralAdScience](docs/IntegralAdScience.md)
 - [DisplayVideo360Api.IntegrationDetails](docs/IntegrationDetails.md)
 - [DisplayVideo360Api.InventorySource](docs/InventorySource.md)
 - [DisplayVideo360Api.InventorySourceAccessors](docs/InventorySourceAccessors.md)
 - [DisplayVideo360Api.InventorySourceAccessorsAdvertiserAccessors](docs/InventorySourceAccessorsAdvertiserAccessors.md)
 - [DisplayVideo360Api.InventorySourceAccessorsPartnerAccessor](docs/InventorySourceAccessorsPartnerAccessor.md)
 - [DisplayVideo360Api.InventorySourceAssignedTargetingOptionDetails](docs/InventorySourceAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.InventorySourceDisplayCreativeConfig](docs/InventorySourceDisplayCreativeConfig.md)
 - [DisplayVideo360Api.InventorySourceFilter](docs/InventorySourceFilter.md)
 - [DisplayVideo360Api.InventorySourceGroup](docs/InventorySourceGroup.md)
 - [DisplayVideo360Api.InventorySourceGroupAssignedTargetingOptionDetails](docs/InventorySourceGroupAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.InventorySourceStatus](docs/InventorySourceStatus.md)
 - [DisplayVideo360Api.InventorySourceVideoCreativeConfig](docs/InventorySourceVideoCreativeConfig.md)
 - [DisplayVideo360Api.Invoice](docs/Invoice.md)
 - [DisplayVideo360Api.KeywordAssignedTargetingOptionDetails](docs/KeywordAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.LanguageAssignedTargetingOptionDetails](docs/LanguageAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.LanguageTargetingOptionDetails](docs/LanguageTargetingOptionDetails.md)
 - [DisplayVideo360Api.LineItem](docs/LineItem.md)
 - [DisplayVideo360Api.LineItemBudget](docs/LineItemBudget.md)
 - [DisplayVideo360Api.LineItemFlight](docs/LineItemFlight.md)
 - [DisplayVideo360Api.ListAdvertiserAssignedTargetingOptionsResponse](docs/ListAdvertiserAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListAdvertisersResponse](docs/ListAdvertisersResponse.md)
 - [DisplayVideo360Api.ListAssignedInventorySourcesResponse](docs/ListAssignedInventorySourcesResponse.md)
 - [DisplayVideo360Api.ListAssignedLocationsResponse](docs/ListAssignedLocationsResponse.md)
 - [DisplayVideo360Api.ListCampaignAssignedTargetingOptionsResponse](docs/ListCampaignAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListCampaignsResponse](docs/ListCampaignsResponse.md)
 - [DisplayVideo360Api.ListChannelsResponse](docs/ListChannelsResponse.md)
 - [DisplayVideo360Api.ListCombinedAudiencesResponse](docs/ListCombinedAudiencesResponse.md)
 - [DisplayVideo360Api.ListCreativesResponse](docs/ListCreativesResponse.md)
 - [DisplayVideo360Api.ListCustomBiddingAlgorithmsResponse](docs/ListCustomBiddingAlgorithmsResponse.md)
 - [DisplayVideo360Api.ListCustomBiddingScriptsResponse](docs/ListCustomBiddingScriptsResponse.md)
 - [DisplayVideo360Api.ListCustomListsResponse](docs/ListCustomListsResponse.md)
 - [DisplayVideo360Api.ListFirstAndThirdPartyAudiencesResponse](docs/ListFirstAndThirdPartyAudiencesResponse.md)
 - [DisplayVideo360Api.ListGoogleAudiencesResponse](docs/ListGoogleAudiencesResponse.md)
 - [DisplayVideo360Api.ListGuaranteedOrdersResponse](docs/ListGuaranteedOrdersResponse.md)
 - [DisplayVideo360Api.ListInsertionOrderAssignedTargetingOptionsResponse](docs/ListInsertionOrderAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListInsertionOrdersResponse](docs/ListInsertionOrdersResponse.md)
 - [DisplayVideo360Api.ListInventorySourceGroupsResponse](docs/ListInventorySourceGroupsResponse.md)
 - [DisplayVideo360Api.ListInventorySourcesResponse](docs/ListInventorySourcesResponse.md)
 - [DisplayVideo360Api.ListInvoicesResponse](docs/ListInvoicesResponse.md)
 - [DisplayVideo360Api.ListLineItemAssignedTargetingOptionsResponse](docs/ListLineItemAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListLineItemsResponse](docs/ListLineItemsResponse.md)
 - [DisplayVideo360Api.ListLocationListsResponse](docs/ListLocationListsResponse.md)
 - [DisplayVideo360Api.ListManualTriggersResponse](docs/ListManualTriggersResponse.md)
 - [DisplayVideo360Api.ListNegativeKeywordListsResponse](docs/ListNegativeKeywordListsResponse.md)
 - [DisplayVideo360Api.ListNegativeKeywordsResponse](docs/ListNegativeKeywordsResponse.md)
 - [DisplayVideo360Api.ListPartnerAssignedTargetingOptionsResponse](docs/ListPartnerAssignedTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListPartnersResponse](docs/ListPartnersResponse.md)
 - [DisplayVideo360Api.ListSitesResponse](docs/ListSitesResponse.md)
 - [DisplayVideo360Api.ListTargetingOptionsResponse](docs/ListTargetingOptionsResponse.md)
 - [DisplayVideo360Api.ListUsersResponse](docs/ListUsersResponse.md)
 - [DisplayVideo360Api.LocationList](docs/LocationList.md)
 - [DisplayVideo360Api.LookbackWindow](docs/LookbackWindow.md)
 - [DisplayVideo360Api.LookupInvoiceCurrencyResponse](docs/LookupInvoiceCurrencyResponse.md)
 - [DisplayVideo360Api.ManualTrigger](docs/ManualTrigger.md)
 - [DisplayVideo360Api.MaximizeSpendBidStrategy](docs/MaximizeSpendBidStrategy.md)
 - [DisplayVideo360Api.MeasurementConfig](docs/MeasurementConfig.md)
 - [DisplayVideo360Api.MobileApp](docs/MobileApp.md)
 - [DisplayVideo360Api.MobileDeviceIdList](docs/MobileDeviceIdList.md)
 - [DisplayVideo360Api.ModelDate](docs/ModelDate.md)
 - [DisplayVideo360Api.Money](docs/Money.md)
 - [DisplayVideo360Api.NativeContentPositionAssignedTargetingOptionDetails](docs/NativeContentPositionAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.NativeContentPositionTargetingOptionDetails](docs/NativeContentPositionTargetingOptionDetails.md)
 - [DisplayVideo360Api.NegativeKeyword](docs/NegativeKeyword.md)
 - [DisplayVideo360Api.NegativeKeywordList](docs/NegativeKeywordList.md)
 - [DisplayVideo360Api.NegativeKeywordListAssignedTargetingOptionDetails](docs/NegativeKeywordListAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ObaIcon](docs/ObaIcon.md)
 - [DisplayVideo360Api.OmidAssignedTargetingOptionDetails](docs/OmidAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.OmidTargetingOptionDetails](docs/OmidTargetingOptionDetails.md)
 - [DisplayVideo360Api.OnScreenPositionAssignedTargetingOptionDetails](docs/OnScreenPositionAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.OnScreenPositionTargetingOptionDetails](docs/OnScreenPositionTargetingOptionDetails.md)
 - [DisplayVideo360Api.OperatingSystemAssignedTargetingOptionDetails](docs/OperatingSystemAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.OperatingSystemTargetingOptionDetails](docs/OperatingSystemTargetingOptionDetails.md)
 - [DisplayVideo360Api.Operation](docs/Operation.md)
 - [DisplayVideo360Api.Pacing](docs/Pacing.md)
 - [DisplayVideo360Api.ParentEntityFilter](docs/ParentEntityFilter.md)
 - [DisplayVideo360Api.ParentalStatusAssignedTargetingOptionDetails](docs/ParentalStatusAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ParentalStatusTargetingOptionDetails](docs/ParentalStatusTargetingOptionDetails.md)
 - [DisplayVideo360Api.Partner](docs/Partner.md)
 - [DisplayVideo360Api.PartnerAdServerConfig](docs/PartnerAdServerConfig.md)
 - [DisplayVideo360Api.PartnerCost](docs/PartnerCost.md)
 - [DisplayVideo360Api.PartnerDataAccessConfig](docs/PartnerDataAccessConfig.md)
 - [DisplayVideo360Api.PartnerGeneralConfig](docs/PartnerGeneralConfig.md)
 - [DisplayVideo360Api.PartnerRevenueModel](docs/PartnerRevenueModel.md)
 - [DisplayVideo360Api.PerformanceGoal](docs/PerformanceGoal.md)
 - [DisplayVideo360Api.PerformanceGoalBidStrategy](docs/PerformanceGoalBidStrategy.md)
 - [DisplayVideo360Api.PoiAssignedTargetingOptionDetails](docs/PoiAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.PoiSearchTerms](docs/PoiSearchTerms.md)
 - [DisplayVideo360Api.PoiTargetingOptionDetails](docs/PoiTargetingOptionDetails.md)
 - [DisplayVideo360Api.PrismaConfig](docs/PrismaConfig.md)
 - [DisplayVideo360Api.PrismaCpeCode](docs/PrismaCpeCode.md)
 - [DisplayVideo360Api.ProximityLocationListAssignedTargetingOptionDetails](docs/ProximityLocationListAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.PublisherReviewStatus](docs/PublisherReviewStatus.md)
 - [DisplayVideo360Api.RateDetails](docs/RateDetails.md)
 - [DisplayVideo360Api.RegionalLocationListAssignedTargetingOptionDetails](docs/RegionalLocationListAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ReplaceNegativeKeywordsRequest](docs/ReplaceNegativeKeywordsRequest.md)
 - [DisplayVideo360Api.ReplaceNegativeKeywordsResponse](docs/ReplaceNegativeKeywordsResponse.md)
 - [DisplayVideo360Api.ReplaceSitesRequest](docs/ReplaceSitesRequest.md)
 - [DisplayVideo360Api.ReplaceSitesResponse](docs/ReplaceSitesResponse.md)
 - [DisplayVideo360Api.ReviewStatusInfo](docs/ReviewStatusInfo.md)
 - [DisplayVideo360Api.ScriptError](docs/ScriptError.md)
 - [DisplayVideo360Api.SdfConfig](docs/SdfConfig.md)
 - [DisplayVideo360Api.SdfDownloadTask](docs/SdfDownloadTask.md)
 - [DisplayVideo360Api.SdfDownloadTaskMetadata](docs/SdfDownloadTaskMetadata.md)
 - [DisplayVideo360Api.SearchTargetingOptionsRequest](docs/SearchTargetingOptionsRequest.md)
 - [DisplayVideo360Api.SearchTargetingOptionsResponse](docs/SearchTargetingOptionsResponse.md)
 - [DisplayVideo360Api.SensitiveCategoryAssignedTargetingOptionDetails](docs/SensitiveCategoryAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.SensitiveCategoryTargetingOptionDetails](docs/SensitiveCategoryTargetingOptionDetails.md)
 - [DisplayVideo360Api.Site](docs/Site.md)
 - [DisplayVideo360Api.Status](docs/Status.md)
 - [DisplayVideo360Api.SubExchangeAssignedTargetingOptionDetails](docs/SubExchangeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.SubExchangeTargetingOptionDetails](docs/SubExchangeTargetingOptionDetails.md)
 - [DisplayVideo360Api.TargetingExpansionConfig](docs/TargetingExpansionConfig.md)
 - [DisplayVideo360Api.TargetingOption](docs/TargetingOption.md)
 - [DisplayVideo360Api.ThirdPartyOnlyConfig](docs/ThirdPartyOnlyConfig.md)
 - [DisplayVideo360Api.ThirdPartyUrl](docs/ThirdPartyUrl.md)
 - [DisplayVideo360Api.ThirdPartyVerifierAssignedTargetingOptionDetails](docs/ThirdPartyVerifierAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.TimeRange](docs/TimeRange.md)
 - [DisplayVideo360Api.TimerEvent](docs/TimerEvent.md)
 - [DisplayVideo360Api.TrackingFloodlightActivityConfig](docs/TrackingFloodlightActivityConfig.md)
 - [DisplayVideo360Api.Transcode](docs/Transcode.md)
 - [DisplayVideo360Api.UniversalAdId](docs/UniversalAdId.md)
 - [DisplayVideo360Api.UrlAssignedTargetingOptionDetails](docs/UrlAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.User](docs/User.md)
 - [DisplayVideo360Api.UserRewardedContentAssignedTargetingOptionDetails](docs/UserRewardedContentAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.UserRewardedContentTargetingOptionDetails](docs/UserRewardedContentTargetingOptionDetails.md)
 - [DisplayVideo360Api.VideoPlayerSizeAssignedTargetingOptionDetails](docs/VideoPlayerSizeAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.VideoPlayerSizeTargetingOptionDetails](docs/VideoPlayerSizeTargetingOptionDetails.md)
 - [DisplayVideo360Api.ViewabilityAssignedTargetingOptionDetails](docs/ViewabilityAssignedTargetingOptionDetails.md)
 - [DisplayVideo360Api.ViewabilityTargetingOptionDetails](docs/ViewabilityTargetingOptionDetails.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/display-video: Create, see, edit, and permanently delete your Display &amp; Video 360 entities and reports
  - https://www.googleapis.com/auth/display-video-mediaplanning: Create, see, and edit Display &amp; Video 360 Campaign entities and see billing invoices
  - https://www.googleapis.com/auth/display-video-user-management: Private Service: https://www.googleapis.com/auth/display-video-user-management
  - https://www.googleapis.com/auth/doubleclickbidmanager: View and manage your reports in DoubleClick Bid Manager

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/display-video: Create, see, edit, and permanently delete your Display &amp; Video 360 entities and reports
  - https://www.googleapis.com/auth/display-video-mediaplanning: Create, see, and edit Display &amp; Video 360 Campaign entities and see billing invoices
  - https://www.googleapis.com/auth/display-video-user-management: Private Service: https://www.googleapis.com/auth/display-video-user-management
  - https://www.googleapis.com/auth/doubleclickbidmanager: View and manage your reports in DoubleClick Bid Manager

